--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # History files
 .Rhistory
 .Rapp.history
+*.Rproj
+
+# mac system files
+.DS_Store
 
 # Example code in package build process
 *-Ex.R
